2015-12-05  Mattias Andrée  <maandree@member.fsf.org>

	* lib/xgetpass.c: Add ability to use libpassphrase>=1449331105 instead of getpass.
	* libmisc/pam_pass.c: Use xgetpass instead of misc_conv when entering (not retyping) the new password.
	* lib/pwauth.c: Replace getpass with xgetpass.
	* src/gpasswd.c: Likewise.
	* src/newgrp.c: Likewise.
	* src/passwd.c: Likewise.
	* src/sulogin.c: Likewise.

2014-05-09  Christian Perrier  <bubulle@debian.org>

	* Include patches only included in Debian for 4.2
	* man/su.1.xml: Fix typo
	* etc/login.defs src/newusers.c src/useradd.c libmisc/find_new_sub_uids.c libmisc/find_new_sub_gids.c:
	  configure userns
	* po/vi.po: Vietnamese translation update
	* po/fr.po, man/po/fr.po: French translation update
	* po/de.po: German translation update

2014-04-30  Christian Perrier  <bubulle@debian.org>

	* Release 4.2 "as is"

2013-08-25  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: After waitpid(), use errno only if waitpid returned
	-1. Debian#688260
	* src/vipw.c: Likewise for system().

2013-08-23  victory  <victory.deb@gmail.com>

	* po/ja.po: Updated to 558t

2013-08-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/shadow-man-pages.pot: Regenerated.
	* man/po/*.po: Updated PO files.

2013-08-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/newgrp.1.xml: Fix encoding.
	* man/sg.1.xml: Likewise.

2013-08-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/da.po: Unfuzzy according to previous change.
	* man/po/de.po: Likewise.
	* man/po/fr.po: Likewise.
	* man/po/it.po: Likewise.
	* man/po/pl.po: Likewise.
	* man/po/ru.po: Likewise.
	* man/po/sv.po: Likewise.
	* man/po/zh_CN.po: Likewise.

2013-08-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chage.1.xml: Add a non breaking space between options and
	their parameter because xml2po removes those spaces. Alioth#314401
	* man/chfn.1.xml: Likewise.
	* man/chgpasswd.8.xml: Likewise.